assimp won't read .obj file for some reason

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /.vs
 *.blend
 *.blend1
+/GL_Task_6_Code/assets/geometry/blender files/maze.blend
+/GL_Task_6_Code/assets/geometry/blender files/maze.blend1
