--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "C:/Users/Startklar/Documents/Badie/Programmiertechniken für Visual Computing/ptvc24-Echoes-of-the-labyrinth/GL_Task_6_Code"
+    "cmake.sourceDirectory": "C:/Users/Startklar/Documents/Badie/ptvc24-Echoes-of-the-labyrinth/GL_Task_6_Code"
 }
